# invtracker

./: CHANGELOG.md  README.md  flutter_launcher_icons.yaml  pubspec.yaml
.github/workflows/: build-android.yml  build-linux.yml  build-mac.yml  build-win.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/cc/methyl/invoice_tracker/: MainActivity.kt
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/packaging/: invtracker.appdata.xml
linux/packaging/deb/: make_config.yaml
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
misc/: app.json
rust/: Cargo.toml
rust/src/: candle_test.rs  frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rlib.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rlib.podspec
rust_builder/windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/packaging/exe/: make_config.yaml
windows/runner/: Runner.rc
