[package]
name = "rlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"

anyhow = "1.0.97"
env_logger = "0.10"
hex = "0.4"
log = "0.4"
rand = "0.9.0"
rand_core = "0.6"
thiserror = "2.0"

lazy_static = "1.5"

futures = "0.3"
sqlx = {version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"]}
tokio = {version = "1", features = ["rt", "rt-multi-thread", "macros"]}
serde = "1.0"
serde_json = "1.0"

bincode = {version = "2.0", features = ["serde"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}

libsqlite3-sys = { version = "0.28", features = ["bundled-sqlcipher-vendored-openssl"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
